--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -178,6 +178,16 @@ en:
       name: "Name"
       quantity: "Quantity"
       price: "Price"
+      detail order: "Detail Order"
+      total : "Total"
+      seller: "Seller"
+    sold:
+      buyer: "Buyer"
+      items: "Items"
+      quantity: "Quantity"
+      price: "Price"
+      date & time co: "Date & Time Check Out"
+      shop sold: "Shop Sold"
   products:
     index:
       oldest: "Oldest"
@@ -185,20 +195,32 @@ en:
       name: "Name"
       price: "Price"
       category: "Category"
-      avatar: "Avarta"
+      avatar: "Avatar"
       show: "Detail"
       edit: "Edit"
       delete: "Delete"
       add to cart: "Add To Cart"
-      new product: "New Product"
+      add item: "Add Item For Sale"
       search: "Search"
+      Your Items: "Your Items"
     new:
-      new product: "New Product"
+      add items: "Add Item"
       name: "Name"
       category: "Category"
       price: "Price"
       avatar: "Avarta"
       description: "Description"
+      Add Product: "Add Item"
+      Back: "Back"
+    edit:
+      update items: "Update Item"
+      name: "Name"
+      category: "Category"
+      price: "Price"
+      avatar: "Avarta"
+      description: "Description"
+      Update Item: "Update Item"
+      Back: "Back"
   categories:
     index:
       name: "Name"
@@ -206,4 +228,45 @@ en:
       delete: "Delete"
       search: "Search"
       new category: "New Category"
-
+  carts:
+    index:
+      Your Check Out: "Your Check Out"
+      Date time: "Date time"
+      Total Detail: "Total Detail"
+      Status: "Status"
+      Detail: "Detail"
+    show:
+      Your Cart: "Your Cart"
+      Product: "Product"
+      Quantity: "Quantity"
+      Price: "Price"
+      Remove: "Remove"
+      Continue to buy: "Continue to buy"
+      Remove Order: "Remove Order"
+      Total: "Total"
+      Empty Cart: "Empty Cart"
+      Check Out: "Check Out"
+  pages:
+    index:
+      Category: "Category"
+  #header
+  List Cart: "List Cart"
+  Log in: "Log in"
+  Log out: "Log out"
+  #devise #registrations
+  Your Profile: "Your Profile"
+  Avatar: "Avatar"
+  Name: "Name"
+  Phone: "Phone"
+  Address: "Address"
+  Email: "Email"
+  Password: "Password"
+  Password confirmation: "Password confirmation"
+  Current password: "Current password"
+  Update: "Update"
+  Back: "Back"
+  Cancel my account: "Cancel my account"
+  Choose File: "Choose File"
+  lb: "(leave blank if you don't want to change it)"
+  wn: "(we need your current password to confirm your changes)"
+  ch: "characters minimum"
