--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -136,30 +136,43 @@ vi:
       blog: "Blog"
   orders:
     index:
-      name: "Ten"
-      quantity: "So luong"
-      price: "Gia"
+      name: "Tên"
+      quantity: "Số lượng"
+      price: "Giá"
+      detail order: "Chi Tiết Đặt Hàng"
+      total: "Tổng tiền"
+      seller: "Người bán"
+    sold:
+      buyer: "Người mua"
+      items: "Mặt hàng"
+      quantity: "Số lượng"
+      price: "Giá tiền"
+      date & time co: "Thời gian đặt hàng"
+      shop sold: "D/S Đặt Hàng"
   products:
     index:
-      oldest: "Cu nhat"
-      newest: "Moi nhat"
-      name: "Ten"
-      price: "Gia"
-      category: "Hang san xuat"
-      avatar: "Anh dai dien"
-      show: "Chi tiet"
-      edit: "Sua"
-      delete: "Xoa"
+      oldest: "Cũ nhất"
+      newest: "Mới nhất"
+      name: "Tên"
+      price: "Giá"
+      category: "Danh mục"
+      avatar: "Hình đại diện"
+      show: "Chi tiết"
+      edit: "Sửa"
+      delete: "Xóa"
       add to cart: "Them vao gio hang"
-      new product: "Them moi san pham"
-      search: "Tim kiem"
-    new:
-      new product: "Them moi san pham"
-      name: "Ten"
-      category: "Hang san xuat"
-      price: "Gia"
-      avatar: "Anh dai dien"
-      description: "Mo ta"
+      add item for sale: "Thêm mặt hàng rao bán"
+      search: "Tìm kiếm"
+      Your Items: "Mặt Hàng Của Bạn"
+    edit:
+      update items: "Cập Nhật Mặt Hàng"
+      name: "Tên"
+      category: "Nhãn hiệu"
+      price: "Giá"
+      avatar: "Hình ảnh mặt hàng"
+      description: "Mô tả sản phẩm"
+      Update Item: "Cập nhật"
+      Back: "Về Trang Chủ"
   categories:
     index:
       name: "Ten"
@@ -167,4 +180,47 @@ vi:
       delete: "Xoa"
       search: "Tim kiem"
       new category: "Them hang san xuat"
+  carts:
+    index:
+      Your Check Out: "Đã Đặt Hàng"
+      Date time: "Thời gian"
+      Total Detail: "Tổng tiền"
+      Status: "Trạng thái"
+      Detail: "Chi tiết"
+    show:
+      Your Cart: "Giỏ Hàng"
+      Product: "Sản phẩm"
+      Quantity: "Số lượng"
+      Price: "Giá"
+      Remove: "Xóa"
+      Continue to buy: "Tiếp tục mua"
+      Remove Order: "Xóa Khỏi Giỏ"
+      Total: "Tổng tiền"
+      Empty Cart: "Xóa Giỏ Hàng"
+      Check Out: "Đặt Hàng"
+  pages:
+    index:
+      Category: "Danh Mục"
+  #header
+  List Cart: "Đơn hàng của bạn"
+  Log in: "Đăng nhập"
+  Log out: "Đăng xuất"
+  #devise #registrations
+  Your Profile: "Thông Tin Tài Khoản"
+  Avatar: "Hình đại diện"
+  Name: "Họ và tên"
+  Phone: "Số điện thoại"
+  Address: "Địa chỉ"
+  Email: "Email"
+  Password: "Mật khẩu"
+  Password confirmation: "Xác nhận lại mật khẩu"
+  Current password: "Mật khẩu hiện tại"
+  Update: "Cập nhật"
+  Back: "Về  trang chủ"
+  Cancel my account: "Hủy tài khoản"
+  Choose File: "Chọn ảnh"
+  lb: "(để  trống nếu bạn không muốn thay đổi mật khẩu)"
+  wn: "(nhập password hiện tại để xác nhận sự thay đổi của bạn)"
+  ch: "ký tự tối thiểu"
+
 
